Work on Communication
- first pass on Bluetooth
- Preferences

	modified:   AndroidManifest.xml
	new file:   preferences.xml
	modified:   res/menu/menu.xml
	renamed:    res/menu/menu_serial_prefs.xml -> res/menu/menu_comm_prefs.xml
	modified:   res/values/comm_types.xml
	modified:   res/values/strings.xml
	modified:   res/xml/communication_preferences.xml
	new file:   src/de/unierlangen/like/serialport/Bluetooth.java
	modified:   src/de/unierlangen/like/serialport/CommunicationManager.java
	modified:   src/de/unierlangen/like/serialport/ProxyReceivingThead.java
	modified:   src/de/unierlangen/like/serialport/ProxyTxChannel.java
	modified:   src/de/unierlangen/like/serialport/ReceivingThread.java
	modified:   src/de/unierlangen/like/serialport/SerialPort.java
	modified:   src/de/unierlangen/like/ui/CommunicationPreferences.java
	modified:   src/de/unierlangen/like/ui/OptionsMenuActivity.java
	deleted:    src/de/unierlangen/like/ui/UserPreferences.java

--- a/res/values/comm_types.xml
+++ b/res/values/comm_types.xml
@@ -5,12 +5,14 @@
 		<item>serial</item>
 		<item>emulation</item>
 		<item>emulationSimple</item>
+		<item>bluetooth</item>
 	</string-array>
 	
 	<string-array name="comm_types_value">
 		<item>serial</item>
 		<item>emulation</item>
 		<item>emulationSimple</item>
+		<item>bluetooth</item>
 	</string-array>
 
 </resources>
