--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,16 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item 
-		android:title = "Your location"
+		android:title = "Where am I?"
 		android:id = "@+id/your_location"
-		android:icon="@drawable/your_location" />
+		android:icon="@drawable/your_location"
+		android:showAsAction="always" />
 	<item 
 		android:title = "Test mode"
 		android:id = "@+id/test_mode"
-		android:icon="@drawable/test_mode" />
+		android:icon="@drawable/test_mode"
+		android:showAsAction="ifRoom" />
 	<item 
 		android:title = "Info"
 		android:id = "@+id/info"
-		android:icon="@drawable/info" >
+		android:icon="@drawable/info"
+		android:showAsAction="ifRoom" >
 		
 		<menu>
 			<item 
@@ -25,6 +28,7 @@
 	<item 
 		android:title="Preferences"
 		android:id = "@+id/prefs" 
-		android:icon="@drawable/prefs" >
+		android:icon="@drawable/prefs"
+		android:showAsAction="always" >
 	</item>
 </menu>
