--- a/res/xml/reader_preferences.xml
+++ b/res/xml/reader_preferences.xml
@@ -58,8 +58,7 @@
                 android:key="customPref" />
         </PreferenceCategory>
         
-<de.unierlangen.like.navigation.SeekBarPreference  
-                
+<de.unierlangen.like.preferences.SeekBarPreference
                 android:key="seekBarPref"
                 android:defaultValue="32"
                 android:title="SeekBar Preference" />
