Added logging preferences
this closes #17

	new file:   res/xml/logging_preferences.xml
	modified:   res/xml/preference_headers.xml
	modified:   src/de/unierlangen/like/NavigationApplication.java
	new file:   src/de/unierlangen/like/preferences/LoggingPreferencesFragment.java

--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -46,5 +46,8 @@
     <header
         android:fragment="de.unierlangen.like.preferences.ReaderRegistersListFragment"
         android:title="Registers" />
+    <header
+        android:fragment="de.unierlangen.like.preferences.LoggingPreferencesFragment"
+        android:title="Logging" />
 
 </preference-headers>
