Add drawMapOverlay preference
	modified:   res/xml/preference_headers.xml
	modified:   src/de/unierlangen/like/customviews/MapView.java
	modified:   src/de/unierlangen/like/ui/MainYourLocationActivity.java

	modified:   src/de/unierlangen/like/ui/MainYourLocationActivity.java

Conflicts:

	res/xml/preference_headers.xml

--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -49,5 +49,7 @@
     <header
         android:fragment="de.unierlangen.like.preferences.LoggingPreferencesFragment"
         android:title="Supress logging" />
-
+    <header
+        android:fragment="de.unierlangen.like.preferences.DebugPreferencesFragment"
+        android:title="Debug" />
 </preference-headers>
