--- a/res/layout-land/main_your_location.xml
+++ b/res/layout-land/main_your_location.xml
@@ -1,47 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-	android:background="#E6F0DB"
-	android:gravity="center">
-	
-	<de.unierlangen.like.customviews.MapView 
-		android:layout_width="fill_parent"
-		android:layout_height="380dip"
-		android:layout_alignParentTop="true"
-		android:paddingBottom="10dip"
-		android:id="@+id/mapView" />
-	
-	<ZoomControls 
-		android:layout_below="@+id/mapView"
-		android:id="@+id/zoomcontrols"
-		android:gravity="center_horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" />
+    android:layout_height="fill_parent"
+    android:background="#E6F0DB"
+    android:gravity="center"
+    android:orientation="horizontal"
+    tools:context=".ui.MainYourLocationActivity" >
 
-<!-- <TextView  
-    	android:layout_width="fill_parent" 
-    	android:layout_height="wrap_content" 
-    	android:gravity="center"
-    	android:textStyle="bold"
-    	android:textSize="18sp"
-    	android:textColor="#ffffff"
-    	android:text="@string/tagAmount_label" /> -->	
-    	
-<!--     <TextView  
-    	android:gravity="center"
-    	android:textStyle="bold"
-    	android:textSize="18sp"
-    	android:textColor="#ffffff"
-    	android:hint="hint"
-    	android:layout_width="wrap_content" 
-    	android:layout_height="fill_parent"
-    	android:id="@+id/tag_amount" /> -->
-	
+    <de.unierlangen.like.customviews.MapView
+        android:id="@+id/mapView"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true" />
 
-</RelativeLayout>    
-	
-
- 
-
+</RelativeLayout>
