--- a/res/layout/main_your_location.xml
+++ b/res/layout/main_your_location.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-	android:background="#E6F0DB"
-	android:gravity="center">
-	
-	<de.unierlangen.like.customviews.MapView
-	    android:id="@+id/mapView"
-	    android:layout_width="fill_parent"
-	    android:layout_height="match_parent"
-	    android:layout_alignParentTop="true" />
-	
-</RelativeLayout>    
-	
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
 
- 
+    <de.unierlangen.like.customviews.MapView
+        android:id="@+id/mapView"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:background="#E6F0DB" />
 
+</RelativeLayout>
