--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" 
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:gravity="center" >
-	
-	<ScrollView 
-		android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content" 
-		android:padding="10dp"
-		android:scrollbars="vertical"
-		android:isScrollContainer="true" >
-		<TextView
-	        android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content" 
-	    	android:text="@string/about_msg"
-	    	android:id="@+id/about_content"
-	    	android:textColor="#ffffff" />
-	</ScrollView>
-	
-	<LinearLayout
-		android:padding="15dp"
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content">
-		<Button  
-		   	android:layout_width="wrap_content" 
-		   	android:layout_height="wrap_content" 
-		   	android:textStyle="bold"
-		   	android:text="   OK   " 
-		   	android:id="@+id/ok_button" />
-	</LinearLayout>	
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="242dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_weight="0.23"
+        android:text="@string/about_msg"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="@string/ok_label" />
 
 </LinearLayout>
