Introduced new icons
	modified:   AndroidManifest.xml
	deleted:    res/drawable/android1.png
	renamed:    res/drawable/icon.png -> res/drawable/app_icon.png
	deleted:    res/drawable/console.png
	modified:   res/drawable/find_room.png
	new file:   res/drawable/help.png
	modified:   res/drawable/info.png
	renamed:    res/drawable/info.png -> res/drawable/info1.png
	modified:   res/drawable/map_small.jpg
	modified:   res/drawable/prefs.png
	new file:   res/drawable/show_location.png
	deleted:    res/drawable/your_location.png
	modified:   res/menu/menu.xml
	modified:   res/values/strings.xml
	modified:   src/de/unierlangen/like/rfid/ReaderService.java
	modified:   src/de/unierlangen/like/ui/OptionsMenuActivity.java

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,29 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item 
-		android:title = "Where am I?"
-		android:id = "@+id/your_location"
-		android:icon="@drawable/your_location"
+		android:title = "Find room"
+		android:id = "@+id/find_room"
+		android:icon="@drawable/find_room"
 		android:showAsAction="always" />
+
 	<item 
-		android:title = "Info"
-		android:id = "@+id/info"
+		android:title = "About"
+		android:id = "@+id/about" 
 		android:icon="@drawable/info"
-		android:showAsAction="ifRoom" >
-		
-		<menu>
-			<item 
-				android:title = "About this application"
-				android:id = "@+id/about_submenu" />
-			<item 
-				android:title = "How to use the application"
-				android:id = "@+id/help_submenu" />
-		</menu>
-	
-	</item>
+		android:showAsAction="always" />
+
 	<item 
-		android:title="Preferences"
+		android:title = "Help"
+		android:id = "@+id/help"
+		android:icon="@drawable/help"
+		android:showAsAction="always" />
+
+	<item 
+		android:title="Settings"
 		android:id = "@+id/prefs" 
 		android:icon="@drawable/prefs"
-		android:showAsAction="always" >
-	</item>
+		android:showAsAction="always" />
+
 </menu>
