Modified About activity
doesn't look good in landscape orientation

	modified:   AndroidManifest.xml
	modified:   res/layout/about.xml
	modified:   src/de/unierlangen/like/ui/OptionsMenuActivity.java

--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -4,24 +4,30 @@
     android:layout_height="fill_parent"
     android:gravity="center"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="242dp"
+
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_weight="0.23"
-        android:text="@string/about_msg"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.58" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/about_msg"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+    </ScrollView>
 
     <Button
         android:id="@+id/about_ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="@string/ok_label" />
+        android:text="@string/ok_label"
+        android:layout_marginBottom="15dp" />
 
 </LinearLayout>
