--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -1,36 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" 
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:gravity="center" >
-	
-	<ScrollView 
-		android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content" 
-		android:padding="10dp"
-		android:scrollbars="vertical"
-		android:isScrollContainer="true" >
-		<TextView
-	        android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content" 
-	    	android:text="@string/help_msg"
-	    	android:id="@+id/help_content"
-	    	android:textColor="#ffffff" />
-	</ScrollView>
-	
-	<LinearLayout
-		android:padding="15dp"
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content">
-		<Button  
-		   	android:layout_width="wrap_content" 
-		   	android:layout_height="wrap_content" 
-		   	android:textStyle="bold"
-		   	android:text="   OK   " 
-		   	android:id="@+id/ok_button" />
-	</LinearLayout>	
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
+    <android.support.v4.view.ViewPager
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".HelpActivity" />
 
 </LinearLayout>
