--- a/res/layout/add_tag_activity.xml
+++ b/res/layout/add_tag_activity.xml
@@ -5,14 +5,14 @@
     android:orientation="horizontal" >
 
     <fragment
-        android:id="@+id/add_tag_details"
+        android:id="@+id/add_tag_details_fragment"
         android:name="de.unierlangen.like.ui.AddTagDetailsFragment"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <fragment
-        android:id="@+id/add_tag_map"
+        android:id="@+id/add_tag_map_fragment"
         android:name="de.unierlangen.like.ui.AddTagMapFragment"
         android:layout_width="0px"
         android:layout_height="match_parent"
