--- a/res/layout/find_room.xml
+++ b/res/layout/find_room.xml
@@ -1,43 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	
-	<LinearLayout 
-		android:id="@+id/linearLayout1" 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" 
-		android:orientation="vertical">
-			<AutoCompleteTextView 
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" 
-				android:id="@+id/listOfDestinations" 
-				android:layout_gravity="top">
-			<requestFocus></requestFocus>
-			</AutoCompleteTextView>
-	</LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal" >
 
-	<LinearLayout 
-		android:id="@+id/linearLayout2" 
-		android:gravity="bottom" 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" 
-		android:layout_gravity="right">
-		<Button 
-			android:id="@+id/buttonClear" 
-			android:text="Clear" 
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content">
-		</Button>
-		<Button 
-			android:layout_gravity="bottom" 
-			android:id="@+id/buttonOK" 
-			android:text="Search" 
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content">
-		</Button>
-	</LinearLayout>
-	    
+    <Button
+        android:id="@+id/buttonClear"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="Clear" />
+        
+    <AutoCompleteTextView
+        android:id="@+id/listOfDestinations"
+        android:layout_width="0dp"
+        android:layout_weight="4"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionSearch" >
+    </AutoCompleteTextView>
+
+    <Button
+        android:id="@+id/buttonOK"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="Search" />
+
 </LinearLayout>
