--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" 
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:gravity="center" >
-	
-	<ScrollView 
-		android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content" 
-		android:padding="10dp"
-		android:scrollbars="vertical"
-		android:isScrollContainer="true" >
-		<TextView
-	        android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content" 
-	    	android:text="@string/help_msg"
-	    	android:id="@+id/help_content"
-	    	android:textColor="#ffffff" />
-	</ScrollView>
-	
-	<LinearLayout
-		android:padding="15dp"
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content">
-		<Button  
-		   	android:layout_width="wrap_content" 
-		   	android:layout_height="wrap_content" 
-		   	android:textStyle="bold"
-		   	android:text="   OK   " 
-		   	android:id="@+id/ok_button" />
-	</LinearLayout>	
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:isScrollContainer="true"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:scrollbars="vertical" >
+
+        <TextView
+            android:id="@+id/help_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/help_msg"
+            android:textColor="#ffffff" />
+    </ScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginLeft="16dip"
+        android:layout_marginRight="16dip"
+        android:background="?android:attr/dividerHorizontal" />
+
+    <Button
+        android:id="@+id/ok_button"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/ok_label" />
 
 </LinearLayout>
