--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="com.premium.alarm.view.VolumePreference">
-        <attr name="minValue" format="integer" />
-        <attr name="maxValue" format="integer" />
-        <attr name="cancelButton" format="boolean" />
-    </declare-styleable>
-    <attr name="alertFullScreenBackground" format="reference"/>
-    <attr name="alarmDetailsButtonStyle" format="reference"/>
+    <attr name="buttonStyle" format="reference"/>
 </resources>
