move tags to the menu overflow

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -33,6 +33,6 @@
 		android:title = "Add tags"
 		android:id = "@+id/main_add_tag"
 		android:icon="@android:drawable/ic_menu_save"
-		android:showAsAction="always" />
+		android:showAsAction="never" />
 
 </menu>
